--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: monospace;
+  font-family: 'Source Code Pro', monospace;
   font-weight: 800;
+}
+
+body {
+  background-image: url('background.gif');
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
 
 main {
