--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   font-weight: 800;
-  color:black;
+  color: black;
 }
 
 body {
-  background-image: url('background.gif');
+  background-image: url("background.gif");
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -41,7 +41,11 @@ h2 {
 
 button {
   height: 30px;
-  width: 60px;
+  width: 70px;
+  border: 2px solid orange;
+  background-color: orange;
+  color: white;
+  border-radius: 15%;
 }
 
 #list {
@@ -80,3 +84,4 @@ form {
   justify-content: space-between;
   align-items: flex-end;
 }
+
